fix timeline spacing issues

--- a/frontend/scss/_settings.scss
+++ b/frontend/scss/_settings.scss
@@ -24,5 +24,5 @@
 
 /* Page Specific */
 .spec_ranking {
-    --timeline-fight-gap: 00px;
+    --timeline-fight-gap: -1px;  // 1px overlap on border
 }
