--- a/frontend/src/components/PlayerNames/PlayerNamesFight.scss
+++ b/frontend/src/components/PlayerNames/PlayerNamesFight.scss
@@ -2,26 +2,9 @@
 
 .fight {
 
-    margin-top: var(--timeline-fight-gap, 0);
-
     display: flex;
-    // gap: 0.25rem;
-
-    border: 1px solid black;
+    // border: 1px solid black;
     border-right: none;
 
-
-    // first fight needs more space for the timeline ruler
-    &:first-child {
-        margin-top: var(--timeline-ruler-height);
-    }
-
-    // round off first and last childs corners
-    &:first-child {
-        border-top-left-radius: 0.25rem;
-    }
-
-    &:last-child {
-        border-bottom-left-radius: 0.25rem;
-    }
+    margin-bottom: var(--timeline-fight-gap, 0);
 }
